cambios de Dani

--- a/src/app/pages/formulario/formulario.component.html
+++ b/src/app/pages/formulario/formulario.component.html
@@ -1,34 +1,36 @@
 <div class="container">
-  <h2>Adivina qué Personaje de My Little Pony eres✨</h2>
-
+  <h2>🌈 ¡Descubre qué Pony de Equestria eres! 🦄</h2>
+  
   <form [formGroup]="formulario" (ngSubmit)="adivinarPersonaje()">
-
+    
     <div>
-      <label for="colorFavorito">🌈 ¿Cuál es tu color favorito?</label>
+      <label for="colorFavorito">🎨 ¿Cuál es tu color favorito?</label>
       <input id="colorFavorito" formControlName="colorFavorito" type="text" />
-      <small *ngIf="formulario.get('colorFavorito')?.invalid && formulario.get('colorFavorito')?.touched"
-        class="error">Este campo es obligatorio.</small>
+      <small class="error" [hidden]="!(formulario.get('colorFavorito')?.invalid && formulario.get('colorFavorito')?.touched)">
+        🌟 Este campo es obligatorio.
+      </small>
     </div>
 
     <div>
       <label for="fruta">🍎 ¿Qué fruta te gusta más?</label>
       <input id="fruta" formControlName="fruta" type="text" />
-      <small *ngIf="formulario.get('fruta')?.invalid && formulario.get('fruta')?.touched" class="error">Este campo es
-        obligatorio.</small>
+      <small class="error" [hidden]="!(formulario.get('fruta')?.invalid && formulario.get('fruta')?.touched)">
+        🌟 Este campo es obligatorio.
+      </small>
     </div>
 
     <div>
-      <label for="habilidad">💪 ¿Cómo te describes según las opciones?</label>
+      <label for="habilidad">✨ ¿Cómo te describes según las opciones?</label>
       <input id="habilidad" formControlName="habilidad" type="text" />
-      <small *ngIf="formulario.get('habilidad')?.invalid && formulario.get('habilidad')?.touched" class="error">Este
-        campo es obligatorio.</small>
+      <small class="error" [hidden]="!(formulario.get('habilidad')?.invalid && formulario.get('habilidad')?.touched)">
+        🌟 Este campo es obligatorio.
+      </small>
     </div>
 
-    <button type="submit" [disabled]="formulario.invalid">Adivinar</button>
+    <button type="submit" [disabled]="formulario.invalid">🌟 Adivinar 🦄</button>
   </form>
 
-  <!-- Mostrar el resultado -->
-  <div *ngIf="resultado">
-    <h3>{{ resultado }}</h3>
+  <div [hidden]="!mostrarResultado">
+    <h3>🎉 {{ resultado }} 🎠</h3>
   </div>
 </div>
