--- a/src/app/pages/formulario/formulario.component.css
+++ b/src/app/pages/formulario/formulario.component.css
@@ -17,57 +17,11 @@ body {
 
 input {
   width: 80%;
-  padding: 8px;
+  padding: 10px;
   margin: 10px 0;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 2px rgba(255, 105, 180, 0.7);
-  /* Sombra rosa */
+  border-radius: 10px;
+  border: 2px solid #ff66b2;
 }
-
-input:focus {
-  outline: none;
-  box-shadow: 0 0 10px 2px rgba(255, 105, 180, 1);
-  /* Aumentar la sombra al hacer focus */
-}
-
-label {
-  display: flex;
-  align-items: center;
-  margin-bottom: 5px;
-}
-
-label::before {
-  content: "";
-  margin-right: 10px;
-  font-size: 20px;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #28a745;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-button:disabled {
-  background-color: #ccc;
-}
-
-h3 {
-  color: #007bff;
-}
-
-small.error {
-  color: red;
-  font-size: 12px;
-}
-
-
-.btnEnviar {
-  background-color: pink;
-}
-
 
 button {
   padding: 12px 25px;
